--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -157,7 +157,7 @@ youtube,
     <br />
     <br />
 
-    <div class = "container">
+    <div class"container">
       <div class="flash">
           <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %> alert-dismissible">
@@ -170,7 +170,7 @@ youtube,
       </div>
     </div>
 
-    <div class = "container">
+    <div class"container">
       <%= yield %>
     </div>
 
@@ -223,6 +223,6 @@ youtube,
             </div>
           </div>
       </nav>
-      <%# = console %>
+      <%#console %>
     </body>
 </html>
