--- a/app/views/listings/payment.html.erb
+++ b/app/views/listings/payment.html.erb
@@ -57,14 +57,14 @@
 
 <script>
     // Create a Stripe client.
-    var stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
+    var stripeStripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
 
     // Create an instance of Elements.
-    var elements = stripe.elements();
+    var elementsstripe.elements();
 
     // Custom styling can be passed to options when creating an Element.
     // (Note that this demo uses a wider set of styles than the guide below.)
-    var style = {
+    var style{
         base: {
             color: '#32325d',
             fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
@@ -81,31 +81,31 @@
     };
 
     // Create an instance of the card Element.
-    var card = elements.create('card', {style: style});
+    var cardelements.create('card', {style: style});
 
     // Add an instance of the card Element into the `card-element` <div>.
     card.mount('#card-element');
 
     // Handle real-time validation errors from the card Element.
     card.addEventListener('change', function(event) {
-        var displayError = document.getElementById('card-errors');
+        var displayErrordocument.getElementById('card-errors');
         if (event.error) {
-            displayError.textContent = event.error.message;
+            displayError.textContentevent.error.message;
         } else {
-            displayError.textContent = '';
+            displayError.textContent'';
         }
     });
 
     // Handle form submission.
-    var form = document.getElementById('payment-form');
+    var formdocument.getElementById('payment-form');
     form.addEventListener('submit', function(event) {
     event.preventDefault();
 
     stripe.createToken(card).then(function(result) {
         if (result.error) {
             // Inform the user if there was an error.
-            var errorElement = document.getElementById('card-errors');
-            errorElement.textContent = result.error.message;
+            var errorElementdocument.getElementById('card-errors');
+            errorElement.textContentresult.error.message;
         } else {
             // Send the token to your server.
             stripeTokenHandler(result.token);
@@ -116,8 +116,8 @@
     // Submit the form with the token ID.
     function stripeTokenHandler(token) {
         // Insert the token ID into the form so it gets submitted to the server
-        var form = document.getElementById('payment-form');
-        var hiddenInput = document.createElement('input');
+        var formdocument.getElementById('payment-form');
+        var hiddenInputdocument.createElement('input');
         hiddenInput.setAttribute('type', 'hidden');
         hiddenInput.setAttribute('name', 'stripeToken');
         hiddenInput.setAttribute('value', token.id);
