--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-    <div class = "container">
+    <div class"container">
           <header class="business-header">
         <div class="container">
             <div class="row">
