--- a/app/views/partials/_google_analytics.erb
+++ b/app/views/partials/_google_analytics.erb
@@ -1,7 +1,7 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src='https://www.googletagmanager.com/gtag/js?id=<%= ENV["GOOGLEANALYTICS"] %>'></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
+  window.dataLayerwindow.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', '<%= ENV["GOOGLEANALYTICS"] %>');
