--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -73,12 +73,12 @@
                 </b>
                 <% if @user.present? %>
                     <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
-                        <i class = "fa fa-heart"></i>
+                        <i class"fa fa-heart"></i>
                         <%= @listing.votes_for.size %>
                     <% end %>
                 <% else %>
                     <a href="#" class="pull-right">
-                        <i class = "fa fa-heart"></i>
+                        <i class"fa fa-heart"></i>
                         <%= @listing.votes_for.size %>
                     </a>
                 <% end %>
