UPDATES cat/subcat views. menu widgets now on the left.

--- a/app/views/categories/_more_categories.erb
+++ b/app/views/categories/_more_categories.erb
@@ -1,4 +1,4 @@
-<div class= 'categories1'>
+<div>
   <div align="center" style= "padding:10px 0px 0px 1px;" class"small-heading"> More categories </div>
   <ul class='categories'>
     <% @all_categories.each do |category| %>
@@ -6,4 +6,3 @@
     <% end %>
   </ul>
 </div>
-<br>
