--- a/app/views/categories/_search.erb
+++ b/app/views/categories/_search.erb
@@ -1,4 +1,4 @@
-<div align="center" class="rightbar-top">
+<div class="rightbar">
     <%= form_tag search_listings_path, class:"form-inline", method: :get do |f| %>
         <div class="space"><%= text_field_tag :search, nil, placeholder: 'search', class: "form-control", style: 'width: 150px; height: 30px' %></div>
         <div class="space"><%= text_field_tag :location, nil, placeholder: 'near', class: "form-control" , style: 'width: 150px; height: 30px'%></div>
@@ -6,4 +6,3 @@
         <%= submit_tag 'SEARCH', class: "btn btn-success", style: 'width: 80px; height: 30px'  %>
     <% end %>
 </div>
-<br>
