--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -4,7 +4,7 @@
 
             <div class="panel-heading">
                 <h2>Edit Listing</h2>
-                <div class"small-heading">(All fields required.) </div>
+                <div class = "small-heading">(All fields required.) </div>
             </div>
 
             <div class="panel-body">
