--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -60,48 +60,48 @@ $("#listings_submit").on("click", function() {
 });
 
 $(function () {
-    var media_file[];
+    var media_file = [];
 
-    document.getElementById('fileupload').onchangesetFileInfo;
+    document.getElementById('fileupload').onchange = setFileInfo;
 
     function setFileInfo() {
-        var filesthis.files;
+        var files = this.files;
         media_file.push(files[0]);
-        var videodocument.createElement('video');
-        video.preload'metadata';
+        var video = document.createElement('video');
+        video.preload = 'metadata';
 
-        video.onloadedmetadatafunction() {
-            var durationvideo.duration;
-            media_file[media_file.length - 1].durationduration;
-            var infosdocument.getElementById('listing_media_info');
-            infos.textContent"";
-            for (var i0; i < media_file.length; i++) {
+        video.onloadedmetadata = function() {
+            var duration = video.duration;
+            media_file[media_file.length - 1].duration = duration;
+            var infos = document.getElementById('listing_media_info');
+            infos.textContent = "";
+            for (var i = 0; i < media_file.length; i++) {
                 // infos.textContent += media_file[i].name + " duration: " + media_file[i].duration + '\n';
-                infos.textContent"Duration: " + sec2time(media_file[i].duration) + '\n';
+                infos.textContent = "Duration: " + sec2time(media_file[i].duration) + '\n';
             }
         }
 
         function sec2time(timeInSeconds) {
-            var padfunction(num, size) { return ('000' + num).slice(size * -1); },
-            timeparseFloat(timeInSeconds).toFixed(3),
-            hoursMath.floor(time / 60 / 60),
-            minutesMath.floor(time / 60) % 60,
-            secondsMath.floor(time - minutes * 60),
-            millisecondstime.slice(-3);
+            var pad = function(num, size) { return ('000' + num).slice(size * -1); },
+            time = parseFloat(timeInSeconds).toFixed(3),
+            hours = Math.floor(time / 60 / 60),
+            minutes = Math.floor(time / 60) % 60,
+            seconds = Math.floor(time - minutes * 60),
+            milliseconds = time.slice(-3);
 
             // return pad(hours, 2) + ':' + pad(minutes, 2) + ':' + pad(seconds, 2) + ',' + pad(milliseconds, 3);
             return  minutes + ' minutes and ' + pad(seconds, 2) + ' seconds.';
         }
 
-        video.srcURL.createObjectURL(files[0]);
+        video.src = URL.createObjectURL(files[0]);
     }
 
     $('#new_listing_upload').find("input:file").each(function(i, elem) {
-        var fileInput$(elem);
-        var form$(fileInput.parents('form:first'));
-        var submitButtonform.find('input[type="submit"]');
-        var progressBar $("<div class='bar'></div>");
-        var barContainer$("<div class='progress'></div>").append(progressBar);
+        var fileInput = $(elem);
+        var form = $(fileInput.parents('form:first'));
+        var submitButton = form.find('input[type="submit"]');
+        var progressBar  = $("<div class='bar'></div>");
+        var barContainer = $("<div class='progress'></div>").append(progressBar);
 
         $('#listing_media_progress').after(barContainer);
 
@@ -121,7 +121,7 @@ $(function () {
                 });
             },
             progressall: function (e, data) {
-                var progressparseInt(data.loaded / data.total * 100, 10);
+                var progress = parseInt(data.loaded / data.total * 100, 10);
                 progressBar.css('width', progress + '%')
             },
             start: function (e) {
@@ -137,10 +137,10 @@ $(function () {
                 progressBar.text("Uploading done");
 
                 // extract key and generate URL from response
-                var key  $(data.jqXHR.responseXML).find("Key").text();
-                var url  '//' + form.data('host') + '/' + key;
-                var url_pathwindow.location.pathname.split('/');
-                var listings_idurl_path[url_path.length - 1];
+                var key   = $(data.jqXHR.responseXML).find("Key").text();
+                var url   = '//' + form.data('host') + '/' + key;
+                var url_path = window.location.pathname.split('/');
+                var listings_id = url_path[url_path.length - 1];
 
                 $.ajax({
                     type: 'PATCH',
@@ -152,7 +152,7 @@ $(function () {
                     dataType: 'json',
                     statusCode: {
                         200: function() {
-                            window.location.href"//" + window.location.hostname
+                            window.location.href = "//" + window.location.hostname
                         },
                         404: function() {
                             location.reload();
