--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,13 +32,48 @@ body{height:100%;}
 div.panel-body > a > img { width: 100% }
 
 .show-box {font-size: 12px; width: 500px; max-width: 100%;}
-.pin-item {margin: 10px; width: 150px; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22); border-radius: 7px;
-.pin img {width: 200%; height: auto; border-radius: 7px;}
-.pin-content{font-size: 12px;}
-.name{font-size: 12px;}
-.board-name{color: #A4A4A4;}
-hr {display: block; margin-top: 0.5em; margin-bottom: 0.5em; margin-left: auto; margin-right: auto; border-style: inset; border-width: 1px;}
+.grid-item {
+  border-radius: 7px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+  float: left;
+  margin: 10px;
+  width: 150px;
+
+  .pin img {
+    width: 200%;
+    height: auto;
+    border-radius: 7px;
+  }
+
+  .pin-content {
+    font-size: 12px;
+  }
+
+  .name {
+    font-size: 12px;
+  }
+
+  .board-name {
+    color: #A4A4A4;
+  }
+
+  hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+  }
 }
+
+// .grid-item {
+//   float: left;
+//   width: 80px;
+//   height: 60px;
+//   border: 2px solid hsla(0, 0%, 0%, 0.5);
+// }
 
 .row1 {margin-right: inherit; margin-left: inherit; padding: 0 20px 0 20px; margin-bottom: 1px;}
 
@@ -971,10 +1006,6 @@ hr {display: block; margin-top: 0.5em; margin-bottom: 0.5em; margin-left: auto; 
 }
 
 .rightbar {
-<<<<<<< HEAD
-=======
-   width: 180px;
->>>>>>> parent of 17d45a4f... REMOVED extra spaces before and after = in .erb files. MOVED category search UI menu to seperate partial.
   background: #f4f4f4;
   border-left: 1px #ccc solid;
   border-right: 1px #ccc solid;
