--- a/app/views/listings/_show.erb
+++ b/app/views/listings/_show.erb
@@ -4,10 +4,10 @@
 </div>
 
 <div class="col-xs-6 col-sm-8 col-md-9">
-  <div class="grid transitions-enabled">
+  <div class="grid">
     <% if @listings.present? %>
       <% @listings.each do |listing| %>
-          <div class="panel panel-default pin-item">
+          <div class="panel panel-default grid-item">
               <div class="panel-body">
                 <%= link_to image_tag(
                   "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3-" + ENV['REGION'] + ".amazonaws.com/" + listing.media_file_name + "-00001.png",
