--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,10 +29,10 @@
                             <% end %>
                         </div>
                         <hr>
-                        <div class="grid transitions-enabled">
+                        <div class="grid">
                             <% if @user.listings.present? %>
                             <% @listings.each do |listing| %>
-                            <div class="panel panel-default pin-item">
+                            <div class="panel panel-default grid-item">
                                 <div class="panel-body">
                                     <%= link_to image_tag(
                               "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3-" + ENV['REGION'] +".amazonaws.com/" + listing.media_file_name + "-00001.png",
