WORKING on new sub/category menu system. UPDATED some CNTL logic to move queries to the MDL.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1011,18 +1011,19 @@ div.panel-body > a > img { width: 100% }
   border-right: 1px #ccc solid;
   border-top: 1px #ccc solid;
   border-bottom: 1px #ccc solid;
-  height: 165px;
   webkit-border-radius: 6px 6px 6px 6px;
 	moz-border-radius: 6px 6px 6px 6px;
 	border-radius: 6px 6px 6px 6px;
 }
-  .rightbar-top{
-    margin-top: 16px;
-  }
-  .space{
-     padding-bottom: 5px;
 
-  }
+.rightbar-top{
+  margin: 16px;
+}
+
+.space{
+  padding-bottom: 5px;
+}
+
 .rightbar1 {
   border-left: 1px #ccc solid;
   border-right: 1px #ccc solid;
