--- a/app/views/listings/_show.erb
+++ b/app/views/listings/_show.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-6 col-sm-4 col-md-3">
   <%= render :partial => 'categories/search' %>
-  <%= render :partial => 'categories/more_categories', locals: {all_categories: @all_categories}  %>
+  <%= render :partial => 'categories/more_categories', locals: {category_menu_items: @category_menu_items}  %>
 </div>
 
 <div class="col-xs-6 col-sm-8 col-md-9">
@@ -34,4 +34,3 @@
   <% end %>
   </div>
 </div>
-<br>
