--- a/app/views/categories/_more_categories.erb
+++ b/app/views/categories/_more_categories.erb
@@ -1,8 +1,6 @@
 <div>
-  <div style="padding:10px 0px 0px 1px;" class="small-heading"> More categories </div>
+  <h4>Categories</h4>
   <ul class='categories'>
-    <% @all_categories.each do |category| %>
-      <li><%= link_to(category.name, category_path(category)) %></li>
-    <% end %>
+    <%= @category_menu_items %>
   </ul>
 </div>
