--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -4,7 +4,7 @@
         <div class="panel panel-default pin-item">
             <div class="panel-body">
               <%= link_to image_tag(
-                "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3-" + ENV['REGION'] + ".amazonaws.com/" + listing.media_file_name + "-00001.png",
+                "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3" + (ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION']) + ".amazonaws.com/" + listing.media_file_name + "-00001.png",
                 class: "img-responsive",
                 onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
               ), listing %>
