ADDED meta-tags  GEM. ADDED example Open Graph meta data header tags to demo with.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,7 +106,16 @@ youtube,
     <script src="https://unpkg.com/videojs-contrib-dash/dist/videojs-dash.min.js"></script>
     
     <%= csrf_meta_tags %>
-    <%= render "partials/google_analytics" %>   
+    <%= render "partials/google_analytics" %>
+    
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://beginnersbook.com/2013/09/add-facebook-like-button-website/" />
+    <meta property="article:author" content="" />
+    <meta property="article:publisher" content="https://www.facebook.com/es2bw" />
+    <meta property="og:title" content="How to add facebook like button to website" />
+    <meta property="og:description" content="Adding a Facebook like button to the website is an easy task, however you may need to have an eye on few other performance related issue which may occur while a(...)" />
+    <meta property="og:image" content="https://beginnersbook.com/wp-content/uploads/2013/09/fblike1-150x150.jpg" />
+
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
