--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,12 +2,12 @@
 <br>
 
 <div class="container-fluid">
+
   <div class="text-center">
     <%= image_tag("connechub-with-tagline.svg", :alt => ENV['NAME'], height: 'auto', width: '75%') %>
   </div>
 
-  <br>
-  <br>
+  <br /><br />
 
   <div class="form-group text-center row">
     <%= form_tag search_listings_path, method: :get do |f| %>
@@ -41,12 +41,45 @@
       h2f: @h2f,
       housing: @housing,
       jobs: @jobs,
-      listings: @listings,
       sale: @sale,
       services: @services,
       unboxing: @unboxing,
       is_subcat: false,
     } %>
   </div>
+
+  <div class="col-xs-6 col-sm-8 col-md-9 main-content">
+    <h3>Most Recent Listings</h3>
+    <% # TODO move this and the List VW implimantation into a partial %>
+    <div class="grid">
+      <% if @listings.present? %>
+        <% @listings.each do |listing| %>
+            <div class="panel panel-default grid-item">
+                <div class="panel-body">
+                  <%= link_to image_tag(
+                    "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3-" + ENV['REGION'] + ".amazonaws.com/" + listing.media_file_name + "-00001.png",
+                    class: "img-responsive",
+                    onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
+                  ), listing %>
+                </div>
+                  <div class="panel-footer pin-content">
+                  <div class="price"><b>$<%= listing.price %></b></div>
+                  <div class="name"><b><%= link_to listing.title, listing %></b></div>
+                  <div class="description"><%= listing.city %>, <%= listing.state %></div>
+                  <small class="board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
+                <hr>
+                  <div>
+                    <%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>
+                    <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
+                  </div>
+                </div>
+              </div>
+          </div>
+        <% end %>
+      <% else %>
+        <p>No listings found!</>
+      <% end %>
+    </div>
+  </div>
+
 </div>
-<div style="height: 45px; width: 100%;"></div>
