--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,12 +26,20 @@
 @import "jbar.colors";
 @import "jbar";
 
-body{height:100%;}
+body {
+  height: 100%;
+}
 
 /* sub/cateogry image thumbnail size */
-div.panel-body > a > img { width: 100% }
+div.panel-body > a > img {
+  width: 100%;
+}
 
-.show-box {font-size: 12px; width: 500px; max-width: 100%;}
+.show-box {
+  font-size: 12px;
+  width: 500px;
+  max-width: 100%;
+}
 .grid-item {
   border-radius: 7px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
@@ -54,7 +62,7 @@ div.panel-body > a > img { width: 100% }
   }
 
   .board-name {
-    color: #A4A4A4;
+    color: #a4a4a4;
   }
 
   hr {
@@ -75,69 +83,81 @@ div.panel-body > a > img { width: 100% }
 //   border: 2px solid hsla(0, 0%, 0%, 0.5);
 // }
 
-.row1 {margin-right: inherit; margin-left: inherit; padding: 0 20px 0 20px; margin-bottom: 1px;}
+.row1 {
+  margin-right: inherit;
+  margin-left: inherit;
+  padding: 0 20px 0 20px;
+  margin-bottom: 1px;
+}
 
-#footer .nav > li > a:hover, #footer .nav > li > a:focus {
+#footer .nav > li > a:hover,
+#footer .nav > li > a:focus {
   //background-color: #f1f1f1;
 }
 
-.dropup-menu {-webkit-box-shadow: 0 0 12px rgba(0, 0, 0, 0.175);box-shadow: 0 0 1px rgba(0, 0, 0, 0.175);margin-top: 0;border-bottom-right-radius: 0;border-bottom-left-radius: 0;border-top-right-radius: 4px;border-top-left-radius: 4px;font-size: 11px;
+.dropup-menu {
+  -webkit-box-shadow: 0 0 12px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.175);
+  margin-top: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  font-size: 11px;
 }
 
 /*Dropdown Submenus*/
 .dropdown-submenu {
-	position:relative;
-
+  position: relative;
 }
-.dropdown-submenu>.dropdown-menu {
-	top:0;
-	left:100%;
-	margin-top:-6px;
-	margin-left:-1px;
-	-webkit-border-radius:0 6px 6px 6px;
-	-moz-border-radius:0 6px 6px 6px;
-	border-radius:0 6px 6px 6px;
+.dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px 6px;
+  border-radius: 0 6px 6px 6px;
 }
-.dropdown-submenu:hover>.dropdown-menu {
-	display:block;
+.dropdown-submenu:hover > .dropdown-menu {
+  display: block;
 }
-.dropdown-submenu>a:after {
-	display:block;
-	content:" ";
-	float:right;
-	width:0;
-	height:0;
-	border-color:transparent;
-	border-style:solid;
-	border-width:5px 0 5px 5px;
-	border-left-color:#cccccc;
-	margin-top:5px;
-	margin-right:-10px;
+.dropdown-submenu > a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #cccccc;
+  margin-top: 5px;
+  margin-right: -10px;
 }
-.dropdown-submenu:hover>a:after {
-	border-left-color:#5074a4;
+.dropdown-submenu:hover > a:after {
+  border-left-color: #5074a4;
 }
 .dropdown-submenu.pull-left {
-	float:right;
+  float: right;
 }
-.dropdown-submenu.pull-left>.dropdown-menu {
-	left:-100%;
-	margin-left:10px;
-	-webkit-border-radius:6px 0 6px 6px;
-	-moz-border-radius:6px 0 6px 6px;
-	border-radius:6px 0 6px 6px;
+.dropdown-submenu.pull-left > .dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  -webkit-border-radius: 6px 0 6px 6px;
+  -moz-border-radius: 6px 0 6px 6px;
+  border-radius: 6px 0 6px 6px;
 }
 
-
-.navbar-nav .li_no_bg .ts-copy{
-    font-size: 12px;
-	padding-bottom: 15px;
-    padding-top: 17px;
-	line-height: 20px;
-	margin-left:7px;
-	margin-right:7px;
-	display: block;
-	height: 30px;
+.navbar-nav .li_no_bg .ts-copy {
+  font-size: 12px;
+  padding-bottom: 15px;
+  padding-top: 17px;
+  line-height: 20px;
+  margin-left: 7px;
+  margin-right: 7px;
+  display: block;
+  height: 30px;
 }
 
 @media (max-width: 767px) {
@@ -164,100 +184,124 @@ div.panel-body > a > img { width: 100% }
   }
 }
 
-.clearfix:before, .clearfix:after { content: ""; display: table; }
-.clearfix:after { clear: both; }
-.clearfix { zoom: 1; }
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
+.clearfix {
+  zoom: 1;
+}
 
 /*  SECTIONS  */
 
 .section {
-	clear: both;
-	padding: 0px;
-	margin: 0px;
+  clear: both;
+  padding: 0px;
+  margin: 0px;
 }
 
 /*  GROUPING  */
 
-
 .group:before,
 .group:after {
-    content:"";
-    display:table;
+  content: "";
+  display: table;
 }
 .group:after {
-    clear:both;
+  clear: both;
 }
 .group {
-    zoom:1; /* For IE 6/7 (trigger hasLayout) */
+  zoom: 1; /* For IE 6/7 (trigger hasLayout) */
 }
 
 /*  GRID COLUMN SETUP   ==================================================================== */
 
 .col {
-	display: block;
-	float: right;
-	margin: 1% 0 1% 1.6%;
+  display: block;
+  float: right;
+  margin: 1% 0 1% 1.6%;
 }
 
-.col:first-child { margin-left: 0; } /* all browsers except IE6 and lower */
-
+.col:first-child {
+  margin-left: 0;
+} /* all browsers except IE6 and lower */
 
 /*  REMOVE MARGINS AS ALL GO FULL WIDTH AT 480 PIXELS */
 
 @media only screen and (max-width: 480px) {
-	.col {
-		margin: 1% 0 1% 0%;
-	}
+  .col {
+    margin: 1% 0 1% 0%;
+  }
 }
-
-
 
 /*  GRID OF FOUR   */
 
-
 .span_4_of_4 {
-	width: 180px;
+  width: 180px;
 }
 
 .span_3_of_4 {
-	width: 180px;
+  width: 180px;
 }
 
 .span_2_of_4 {
-	width: 180px;
+  width: 180px;
 }
 
 .span_1_of_4 {
-	width: 180px;
+  width: 180px;
 }
-
 
 /*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
 
 @media only screen and (max-width: 480px) {
-	.span_4_of_4 {
-		width: 100%;
-	}
-	.span_3_of_4 {
-		width: 100%;
-	}
-	.span_2_of_4 {
-		width: 100%;
-	}
-	.span_1_of_4 {
-		width: 100%;
-	}
+  .span_4_of_4 {
+    width: 100%;
+  }
+  .span_3_of_4 {
+    width: 100%;
+  }
+  .span_2_of_4 {
+    width: 100%;
+  }
+  .span_1_of_4 {
+    width: 100%;
+  }
 }
-
 
 /*  USERNAME POST PAGE STYLE  */
 
-
-.catg_title{font-size:14px; font-family:Verdana, Arial, Helvetica, sans-serif; color:#707070; padding:3px;}
-.category_title{font-size:11px; font-weight:normal;}
-.category_title ul li a:hover{ color: #FFF; /* white */ background-color: #3B7E3A; /* green */  padding:5px;}
-.price{font:Verdana, Arial, Helvetica, sans-serif; color:#3B7E3A; font-size:14px;}
-.price1{font:Verdana, Arial, Helvetica, sans-serif; color:#3B7E3A; font-size:26px; padding:3px; width:150px;}
+.catg_title {
+  font-size: 14px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  color: #707070;
+  padding: 3px;
+}
+.category_title {
+  font-size: 11px;
+  font-weight: normal;
+}
+.category_title ul li a:hover {
+  color: #fff; /* white */
+  background-color: #3b7e3a; /* green */
+  padding: 5px;
+}
+.price {
+  font: Verdana, Arial, Helvetica, sans-serif;
+  color: #3b7e3a;
+  font-size: 14px;
+}
+.price1 {
+  font: Verdana, Arial, Helvetica, sans-serif;
+  color: #3b7e3a;
+  font-size: 26px;
+  padding: 3px;
+  width: 150px;
+}
 .topbar {
   background: #eee;
   margin-bottom: 20px;
@@ -266,7 +310,7 @@ div.panel-body > a > img { width: 100% }
   border-radius: 10px 10px 10px 10px;
   vertical-align: middle;
 }
-.vertical-center{
+.vertical-center {
   position: relative;
   top: 30%;
   a {
@@ -280,11 +324,12 @@ div.panel-body > a > img { width: 100% }
 
 .small-heading {
   text-transform: uppercase;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
   margin: 0 0 8px;
   font-size: 11px;
   font-weight: bold;
-  color: rgba(0, 0, 0, 0.8); }
+  color: rgba(0, 0, 0, 0.8);
+}
 
 .hero-description {
   width: 85%;
@@ -297,80 +342,85 @@ div.panel-body > a > img { width: 100% }
 
 .hero-avatar {
   webkit-border-radius: 6px 0 6px 6px;
-	moz-border-radius: 6px 0 6px 6px;
-	border-radius:6px 0 6px 6px;
+  moz-border-radius: 6px 0 6px 6px;
+  border-radius: 6px 0 6px 6px;
   position: relative;
-   width: 85px;
-  height: 85px;}
+  width: 85px;
+  height: 85px;
+}
 
 .avatar-image {
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .avatar {
   border-radius: 50%;
   width: 45px;
-  height: 45px; }
+  height: 45px;
+}
 
 .pin-avatar {
   border-radius: 50%;
   width: 30px;
-  height: 30px; }
+  height: 30px;
+}
 
 .button {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 11px;
   font-weight: bold;
-  color: #5775BA;
+  color: #5775ba;
   border: 1px solid;
   padding: 0.6em 1em 0.7em 1em;
   cursor: pointer;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
-  border-radius: 5px; }
-  .button:hover {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.8);
-    background-color: #cad6f4; }
-
-
+  border-radius: 5px;
+}
+.button:hover {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.8);
+  background-color: #cad6f4;
+}
 
 .profile-info {
   max-width: 450px;
-  width: 80%; }
+  width: 80%;
+}
 
-
-
-  .vr {
-    width:1px;
-    background-color:#000;
-    position:center;
-    top:0;
-    bottom:0;
-    right: 100px;
+.vr {
+  width: 1px;
+  background-color: #000;
+  position: center;
+  top: 0;
+  bottom: 0;
+  right: 100px;
 }
 .comments {
   padding: 10px;
-  border: 1px solid ;
-  border-color: #86C3FF;
+  border: 1px solid;
+  border-color: #86c3ff;
   padding: 0.6em 1em 0.7em 1em;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  background-color:#F4F8FC;
-  width:450px;
-
+  background-color: #f4f8fc;
+  width: 450px;
 }
 .post-title {
   opacity: 1.4;
-  font-size: 120%; }
+  font-size: 120%;
+}
 
 .post-metadata .post-info {
   padding-left: 10px;
-  width: 100%; }
+  width: 100%;
+}
 
 .post-metadata {
   margin-top: 20px;
-  display: flex; }
+  display: flex;
+}
 
 /* `Grid >> Global
 ----------------------------------------------------------------------------------------------------*/
@@ -397,21 +447,36 @@ div.panel-body > a > img { width: 100% }
   margin-right: 10px;
 }
 
-.push_1, .pull_1,
-.push_2, .pull_2,
-.push_3, .pull_3,
-.push_4, .pull_4,
-.push_5, .pull_5,
-.push_6, .pull_6,
-.push_7, .pull_7,
-.push_8, .pull_8,
-.push_9, .pull_9,
-.push_10, .pull_10,
-.push_11, .pull_11,
-.push_12, .pull_12,
-.push_13, .pull_13,
-.push_14, .pull_14,
-.push_15, .pull_15 {
+.push_1,
+.pull_1,
+.push_2,
+.pull_2,
+.push_3,
+.pull_3,
+.push_4,
+.pull_4,
+.push_5,
+.pull_5,
+.push_6,
+.pull_6,
+.push_7,
+.pull_7,
+.push_8,
+.pull_8,
+.push_9,
+.pull_9,
+.push_10,
+.pull_10,
+.push_11,
+.pull_11,
+.push_12,
+.pull_12,
+.push_13,
+.pull_13,
+.push_14,
+.pull_14,
+.push_15,
+.pull_15 {
   position: relative;
 }
 
@@ -970,7 +1035,7 @@ div.panel-body > a > img { width: 100% }
 .container_12:after,
 .container_16:before,
 .container_16:after {
-  content: '.';
+  content: ".";
   display: block;
   overflow: hidden;
   visibility: hidden;
@@ -1012,15 +1077,15 @@ div.panel-body > a > img { width: 100% }
   border-top: 1px #ccc solid;
   border-bottom: 1px #ccc solid;
   webkit-border-radius: 6px 6px 6px 6px;
-	moz-border-radius: 6px 6px 6px 6px;
-	border-radius: 6px 6px 6px 6px;
+  moz-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px;
 }
 
-.rightbar-top{
+.rightbar-top {
   margin: 16px;
 }
 
-.space{
+.space {
   padding-bottom: 5px;
 }
 
@@ -1031,8 +1096,8 @@ div.panel-body > a > img { width: 100% }
   border-bottom: 1px #ccc solid;
   height: 100px;
   webkit-border-radius: 6px 6px 6px 6px;
-	moz-border-radius: 6px 6px 6px 6px;
-	border-radius: 6px 6px 6px 6px;
+  moz-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px;
 }
 
 .categories1 {
@@ -1042,88 +1107,128 @@ div.panel-body > a > img { width: 100% }
   border-bottom: 1px #ccc solid;
   height: 230px;
   webkit-border-radius: 6px 6px 6px 6px;
-	moz-border-radius: 6px 6px 6px 6px;
-	border-radius: 6px 6px 6px 6px;
-	font-size:12px;
+  moz-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px;
+  font-size: 12px;
 }
 
 .leftbar {
   float: left;
   width: 75%;
   margin-right: 18px;
-
 }
-.contatcus{
-    font-size: 12px;
+.contatcus {
+  font-size: 12px;
 }
-.abouttxt {font-family:Verdana, Geneva, sans-serif; font-size:13px;  color: #000000; padding:50px; }
+.abouttxt {
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 13px;
+  color: #000000;
+  padding: 50px;
+}
 .aboutborder {
-    border-style: solid;
-    border-width: 10px;
-    border-color: #c2f0c2 #c2f0c2 #c2f0c2 #b3d9ff;
-    webkit-border-radius:6px 0 6px 6px;
-	  moz-border-radius:6px 0 6px 6px;
-	  border-radius:6px 0 6px 6px;
-    padding:5px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #c2f0c2 #c2f0c2 #c2f0c2 #b3d9ff;
+  webkit-border-radius: 6px 0 6px 6px;
+  moz-border-radius: 6px 0 6px 6px;
+  border-radius: 6px 0 6px 6px;
+  padding: 5px;
 }
-.abouttxt11 ul li{list-style: square; font-family: Arial, Helvetica, sans-serif; font-size:12px;  color: #000000;}
+.abouttxt11 ul li {
+  list-style: square;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #000000;
+}
 
 .business-header {
-    height: 400px;
-    background: url("blpic.jpg") center center no-repeat scroll;
-    // -webkit-background-size: cover;
-    // -moz-background-size: cover;
-    // background-size: cover;
-    // -o-background-size: cover;
+  height: 400px;
+  background: url("blpic.jpg") center center no-repeat scroll;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // background-size: cover;
+  // -o-background-size: cover;
 }
 
 .featurette-divider {
-    margin: 30px 0;
+  margin: 30px 0;
 }
 
 .featurette {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .featurette-image.pull-left {
-    margin-right: 40px;
+  margin-right: 40px;
 }
 
 .featurette-image.pull-right {
-    margin-left: 40px;
+  margin-left: 40px;
 }
 
 .featurette-heading {
-    font-size: 50px;
+  font-size: 50px;
 }
 
-
-
 /*inside view of the page where main content is located */
-#inside_view{background-color:#FFFFFF; border: 1px solid #CDCDCD;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px; }
-#inside_view_left{background-color:#585858; border: 1px solid #CDCDCD;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px; width: 140px;position:fixed;  }
-
-
-
+#inside_view {
+  background-color: #ffffff;
+  border: 1px solid #cdcdcd;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+#inside_view_left {
+  background-color: #585858;
+  border: 1px solid #cdcdcd;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  width: 140px;
+  position: fixed;
+}
 
 /* left side */
 /*left side profile info such as name, view my profile, and edit links*/
-#lft_container1 { font-family: Arial, Helvetica, sans-serif; font-size: 12px; color:#666666;}
-#lft_container1 ul{ list-style-image: none;	list-style-position: outside;	list-style-type: none;	margin: 0px;	padding: 0px 0px;	display: block;}
-#lft_container1 ul li{float: none; padding: 0px 0px;	margin: 0px;}
-
-
-
+#lft_container1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #666666;
+}
+#lft_container1 ul {
+  list-style-image: none;
+  list-style-position: outside;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px 0px;
+  display: block;
+}
+#lft_container1 ul li {
+  float: none;
+  padding: 0px 0px;
+  margin: 0px;
+}
 
 /*left side profile info such as name, address, etc..*/
-.profile_info{padding:3px; list-style-type: none; }
-#pro_stuff1{padding: 5px 5px; font-family: verdana, sans-serif; font-weight:normal; font-size:11px; color: #ffffff;}
-.prophoto{ padding-left: 10px}
-
+.profile_info {
+  padding: 3px;
+  list-style-type: none;
+}
+#pro_stuff1 {
+  padding: 5px 5px;
+  font-family: verdana, sans-serif;
+  font-weight: normal;
+  font-size: 11px;
+  color: #ffffff;
+}
+.prophoto {
+  padding-left: 10px;
+}
 
 .btn-success {
-  background-color: #3B7E3A;
-  border-color: #3B7E3A
+  background-color: #3b7e3a;
+  border-color: #3b7e3a;
 }
 
 /* ConnecHub flexbox implimentation */
@@ -1152,30 +1257,30 @@ div.panel-body > a > img { width: 100% }
   float: left;
   text-align: center;
   padding-top: 15%;
-  opacity: 0.90;
+  opacity: 0.9;
   display: none;
 }
 
 /* right side UL menu on sub/category views */
 body > div > div > div > div > ul {
-    display: block;
-    list-style-type: none;
-    margin-top: 1em;
-    margin-bottom: 1 em;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 40px;
+  display: block;
+  list-style-type: none;
+  margin-top: 1em;
+  margin-bottom: 1 em;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 40px;
 }
 
 /* User Mgnt View styles */
 #app_view_devise {
   .panel-heading {
-      padding: 5px 15px;
+    padding: 5px 15px;
   }
 
   .panel-footer {
     padding: 1px 15px;
-    color: #A0A0A0;
+    color: #a0a0a0;
   }
 
   .profile-img {
@@ -1188,20 +1293,20 @@ body > div > div > div > div > ul {
     border-radius: 50%;
   }
 
-  .sign-h{
-    text-align:left;
-    color:#317EAC;
+  .sign-h {
+    text-align: left;
+    color: #317eac;
   }
 
-  #sign-icon{
-    margin-right:5px;
-    color:#317EAC;
+  #sign-icon {
+    margin-right: 5px;
+    color: #317eac;
   }
 }
 
 /* Use to allow the fee message form-control container ehight to adjust as needed on http[s]://FQDN/listings/new */
 .fee_amount_message {
-  height: initial
+  height: initial;
 }
 
 /* bootstrap 4 colors in bootstrap 3 */
@@ -1218,7 +1323,7 @@ li.landing_page {
 
 /* Number of items in a cat / sub-cat */
 .cat_item_count {
-  color: #4cae4c
+  color: #4cae4c;
 }
 
 /* Word wrap Listing card long titles */
@@ -1246,19 +1351,18 @@ div.name > b > a {
   box-shadow: 0 1px 3px 0 #e6ebf1;
   -webkit-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
-  }
+}
 
-  .StripeElement--focus {
+.StripeElement--focus {
   box-shadow: 0 1px 3px 0 #cfd7df;
-  }
+}
 
-  .StripeElement--invalid {
+.StripeElement--invalid {
   border-color: #fa755a;
-  }
+}
 
-  .StripeElement--webkit-autofill {
+.StripeElement--webkit-autofill {
   background-color: #fefde5 !important;
-  }
 }
 
 /**
