--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -91,7 +91,7 @@
                             required: true,
                             type: "regexp",
                             maxlength: "256",
-                            pattern: "[A-Za-z\s\!\$\,\.\?]+{256}",
+                            pattern: "[A-Za-z0-9!$,.?\ ]+{256}",
                             placeholder: "exp. Text only Listing Title"
                         %>
                     </div>
