--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,12 +11,12 @@
                     controls=controls
                     data-setup="{}"
                     height="450"
-                    poster="https://<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>.s3<%= ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION']  %>.amazonaws.com/<%= @listing.media_file_name %>-00001.png"
+                    poster="https://<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>.s3<%= (ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION'])  %>.amazonaws.com/<%= URI::encode(@listing.media_file_name) %>-00001.png"
                     preload=preload
                     width="450"
                 >
                     <source
-                        src="https://<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>.s3<%= ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION']  %>.amazonaws.com/<%= @listing.media_file_name + "_playlist.m3u8" %>"
+                        src="https://<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>.s3<%= (ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION']) %>.amazonaws.com/<%= URI::encode(@listing.media_file_name) + "_playlist.m3u8" %>"
                         type="application/x-mpegURL"
                     />
                     <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
