--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,7 +11,7 @@
                     controls=controls
                     data-setup="{}"
                     height="450"
-                    poster="https://<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>.s3<%= (ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION'])  %>.amazonaws.com/<%= URI::encode(@listing.media_file_name) %>-00001.png"
+                    poster="https://<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>.s3<%= (ENV['REGION'] == 'us-east-1' ? "" : "-" + ENV['REGION'])  %>.amazonaws.com/<%= URI::encode(@listing.media_file_name) %>-2m-00001.png"
                     preload=preload
                     width="450"
                 >
