--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -57,7 +57,7 @@
       <div class="panel panel-default grid-item">
         <div class="panel-body">
           <%= link_to image_tag(
-            "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3-" + ENV['REGION'] + ".amazonaws.com/" + listing.media_file_name + "-00001.png",
+            "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3-" + ENV['REGION'] + ".amazonaws.com/" + listing.media_file_name + "-1m-00001.png",
             class: "img-responsive",
             onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
           ), listing %>
