ADDED unique class names to subcat menu items. UPDATED UAT tests.

--- a/app/views/partials/_side_menu.erb
+++ b/app/views/partials/_side_menu.erb
@@ -8,7 +8,7 @@
       <strong><%= link_to 'Campus', category_path(@campus) %></strong>
     </div>
     <% if (!is_subcat and @campus.id == params[:id].to_i) or (is_subcat and @campus.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @campus.id %>">
         <ul>
           <% @campus.subcategories.each do |subcategory| %>
           <li class="landing_page">
@@ -26,7 +26,7 @@
       <strong><%= link_to 'Community', category_path(@community) %></strong>
     </div>
     <% if (!is_subcat and @community.id == params[:id].to_i) or (is_subcat and @community.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @community.id %>">
         <ul>
           <% @community.subcategories.each_with_index do |subcategory, index| %>
           <li class="landing_page">
@@ -44,7 +44,7 @@
       <strong><%= link_to 'Housing', category_path(@housing) %></strong>
     </div>
     <% if (!is_subcat and @housing.id == params[:id].to_i) or (is_subcat and @housing.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @housing.id %>">
         <ul>
           <% @housing.subcategories.each do |subcategory| %>
           <li class="landing_page">
@@ -62,7 +62,7 @@
       <strong><%= link_to 'Hard to Find', category_path(@h2f) %></strong>
     </div>
     <% if (!is_subcat and @h2f.id == params[:id].to_i) or (is_subcat and @h2f.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @h2f.id %>">
         <ul>
           <% @h2f.subcategories.each do |subcategory| %>
           <li class="landing_page">
@@ -80,7 +80,7 @@
       <strong><%= link_to 'Free', category_path(@free) %></strong>
     </div>
     <% if (!is_subcat and @free.id == params[:id].to_i) or (is_subcat and @free.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @free.id %>">
         <ul>
           <% @free.subcategories.each do |subcategory| %>
           <li class="landing_page">
@@ -98,7 +98,7 @@
       <strong><%= link_to 'Jobs', category_path(@jobs) %></strong>
     </div>
     <% if (!is_subcat and @jobs.id == params[:id].to_i) or (is_subcat and @jobs.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @jobs.id %>">
         <ul>
           <% @jobs.subcategories.each do |subcategory| %>
           <li class="landing_page">
@@ -116,7 +116,7 @@
       <strong><%= link_to 'Sale', category_path(@sale) %></strong>
     </div>
     <% if (!is_subcat and @sale.id == params[:id].to_i) or (is_subcat and @sale.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @sale.id %>">
         <ul>
           <% @sale.subcategories.each_with_index do |subcategory, index| %>
           <li class="landing_page">
@@ -134,7 +134,7 @@
       <strong><%= link_to 'Services', category_path(@services) %></strong>
     </div>
     <% if (!is_subcat and @services.id == params[:id].to_i) or (is_subcat and @services.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @services.id %>">
         <ul>
           <% @services.subcategories.each do |subcategory| %>
           <li class="landing_page">
@@ -152,7 +152,7 @@
       <strong><%= link_to 'Unboxing', category_path(@unboxing) %></strong>
     </div>
     <% if (!is_subcat and @unboxing.id == params[:id].to_i) or (is_subcat and @unboxing.id == params[:category_id].to_i) %>
-      <div class="category_title">
+      <div class="category_title sub_category_<%= @unboxing.id %>">
         <ul>
           <% @unboxing.subcategories.each do |subcategory| %>
           <li class="landing_page">
